--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    
 }
 
 body {
@@ -10,6 +11,7 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    background-color: antiquewhite;
 }
 
 .container {
